# qt-cmake-vscode

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.ui
